--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "torch-starter"
 version = "0.1.0"
-description = "CUDA-enabled PyTorch deep learning development environment with uv and VS Code Dev Containers (uses CUDA 12.1 PyTorch wheels)."
+description = "CUDA-enabled PyTorch deep learning development environment with uv and VS Code Dev Containers (uses CUDA 12.6 PyTorch wheels)."
 requires-python = ">=3.12,<3.13"
 license = { text = "MIT" }
 authors = [{ name = "Your Name", email = "your.email@domain.com" }]
@@ -10,44 +10,45 @@ keywords = ["deep-learning", "pytorch", "transformers", "cuda", "gpu", "uv", "de
 
 # Core dependencies - PyTorch CUDA wheels installed separately in Dockerfile
 dependencies = [
-  "numpy>=1.26,<2.1",
-  "pandas>=2.2,<2.3",
-  "scipy>=1.12,<1.15",
-  "scikit-learn>=1.4,<1.6",
-  "tqdm>=4.66,<5.0",
 
-  # Note: PyTorch CUDA wheels installed via extra-index-url in Dockerfile
-  # "torch", "torchvision", "torchaudio" - installed with CUDA support
+  "torch",
+  "torchvision",
+  "torchaudio",
+  "numpy",
+  "pandas",
+  "scipy",
+  "scikit-learn",
+  "tqdm",
 
   # Hugging Face ecosystem
-  "transformers>=4.44,<5.0",
-  "datasets>=2.19,<3.1",
-  "accelerate>=0.33,<1.0",
-  "safetensors>=0.4.2,<1.0",
-  "sentencepiece>=0.2,<1.0",
-  "tokenizers>=0.19,<1.0",
+  "transformers",
+  "datasets",
+  "accelerate",
+  "safetensors",
+  "sentencepiece",
+  "tokenizers",
   
   # Image processing
-  "pillow>=10.0,<11.0",
-  "albumentations>=1.4,<2.0",
+  "pillow",
+  "albumentations",
   
   # Visualization
-  "matplotlib>=3.8,<3.10",
+  "matplotlib",
   
   # Jupyter and interactive development
-  "jupyter>=1.0,<2.0",
-  "ipykernel>=6.29,<7.0",
-  "ipywidgets>=8.1,<9.0",
+  "jupyter",
+  "ipykernel",
+  "ipywidgets",
   
   # Configuration and utilities
-  "pyyaml>=6.0,<7.0",
-  "requests>=2.32,<3.0",
-  "python-dotenv>=1.0,<2.0",
-  "rich>=13.7,<14.0",
-  "typer>=0.12,<1.0",
+  "pyyaml",
+  "requests",
+  "python-dotenv",
+  "rich",
+  "typer",
   
   # GPU monitoring and utilities
-  "nvidia-ml-py>=12.0,<13.0",
+  "nvidia-ml-py"
 ]
 
 [project.optional-dependencies]
@@ -55,163 +56,162 @@ dependencies = [
 # Development tools - code quality and testing
 dev = [
   # Linting and formatting
-  "ruff>=0.6.0,<1.0",
-  "mypy>=1.11,<2.0",
+  "ruff",
+  "mypy",
   
   # Testing framework
-  "pytest>=8.3,<9.0",
-  "pytest-cov>=5.0,<6.0",
-  "pytest-mock>=3.14,<4.0",
-  "pytest-asyncio>=0.23,<1.0",
-  "pytest-xdist>=3.6,<4.0",  # Parallel testing
-  "pytest-gpu>=1.2,<2.0",     # GPU-specific testing
+  "pytest",
+  "pytest",
+  "pytest-mock",
+  "pytest-asyncio",
+  "pytest-xdist",  # Parallel testing
+  "pytest-gpu",     # GPU-specific testing
   
   # Type stubs for better type checking
-  "types-requests>=2.32,<3.0",
-  "types-PyYAML>=6.0,<7.0",
-  "types-pillow>=10.0,<11.0",
+  "types-requests",
+  "types-PyYAML",
+  "types-pillow",
   
   # Pre-commit hooks
-  "pre-commit>=3.8,<4.0",
+  "pre-commit",
   
   # Documentation
-  "mkdocs>=1.6,<2.0",
-  "mkdocs-material>=9.5,<10.0",
+  "mkdocs",
+  "mkdocs-material",
 ]
 
 # Extended data science and visualization tools
 datascience = [
-  "seaborn>=0.13,<1.0",
-  "plotly>=5.22,<6.0",
-  "bokeh>=3.4,<4.0",
-  "altair>=5.4,<6.0",
+  "seaborn",
+  "plotly",
+  "bokeh",
+  "altair",
   
   # Advanced data processing
-  "polars>=1.0,<2.0",
-  "pyarrow>=17.0,<18.0",
-  "fastparquet>=2024.5.0,<2025.0.0",
+  "polars",
+  "pyarrow",
+  "fastparquet",
   
   # Image processing
-  "scikit-image>=0.24,<1.0",
-  "opencv-python>=4.10,<5.0",
-  "pywavelets>=1.6,<2.0",
+  "scikit-image",
+  "opencv-python",
+  "pywavelets",
   
   # Statistical analysis
-  "statsmodels>=0.14,<1.0",
-  "pingouin>=0.5,<1.0",
+  "statsmodels",
+  "pingouin",
 ]
 
 # Jupyter and interactive development
 notebook = [
-  "jupyterlab>=4.2,<5.0",
-  "jupyterlab-widgets>=3.0,<4.0",
-  "ipdb>=0.13,<1.0",
-  "notebook>=7.2,<8.0",
+  "jupyterlab",
+  "jupyterlab-widgets",
+  "ipdb",
+  "notebook",
   
   # Jupyter extensions
-  "jupyterlab-git>=0.50,<1.0",
-  "nbconvert>=7.16,<8.0",
-  "nbformat>=5.10,<6.0",
-  "jupyterlab-nvdashboard>=0.10,<1.0",  # GPU monitoring in Jupyter
+  "jupyterlab-git",
+  "nbconvert",
+  "nbformat",
+  "jupyterlab-nvdashboard",  # GPU monitoring in Jupyter
   
   # Interactive widgets and visualization
-  "ipympl>=0.9,<1.0",
-  "plotly>=5.22,<6.0",
-  "panel>=1.4,<2.0",
+  "ipympl",
+  "plotly",
+  "panel",
 ]
 
 # Experiment tracking and MLOps
 tracking = [
-  "tensorboard>=2.17,<3.0",
-  "wandb>=0.17,<1.0",
-  "mlflow>=2.15,<3.0",
-  "clearml>=1.16,<2.0",
+  "tensorboard",
+  "wandb",
+  "mlflow",
+  "clearml",
   
   # Model versioning and management
-  "dvc>=3.50,<4.0",
-  "dvclive>=3.40,<4.0",
+  "dvc",
+  "dvclive",
 ]
 
 # Data acquisition and external APIs
 data = [
-  "kaggle>=1.6,<2.0",
-  "huggingface-hub>=0.24,<1.0",
+  "kaggle",
+  "huggingface-hub",
   
   # Database connectors
-  "sqlalchemy>=2.0,<3.0",
-  "psycopg2-binary>=2.9,<3.0",
-  "pymongo>=4.8,<5.0",
+  "sqlalchemy",
+  "psycopg2-binary",
+  "pymongo",
   
   # Web scraping and APIs
-  "httpx>=0.27,<1.0",
-  "beautifulsoup4>=4.12,<5.0",
-  "selenium>=4.23,<5.0",
+  "httpx",
+  "beautifulsoup4",
+  "selenium",
 ]
 
 # Performance profiling and debugging tools
 profiling = [
-  "viztracer>=0.16,<1.0",
-  "memory-profiler>=0.61,<1.0",
-  "py-spy>=0.3,<1.0",
-  "line-profiler>=4.1,<5.0",
-  "nvitop>=1.3,<2.0",           # Advanced GPU monitoring
+  "viztracer",
+  "memory-profiler",
+  "py-spy",
+  "line-profiler",
+  "nvitop",           # Advanced GPU monitoring
   
   # GPU profiling
-  "torch-tb-profiler>=0.4,<1.0",
-  "nvidia-ml-py>=12.0,<13.0",
-  "pynvml>=11.5,<12.0",
+  "torch-tb-profiler",
+  "nvidia-ml-py",
+  "pynvml",
 ]
 
 # Security scanning and code analysis
 security = [
-  "safety>=3.2,<4.0",
-  "bandit[toml]>=1.7,<2.0",
-  "semgrep>=1.45,<2.0",
+  "safety",
+  "bandit[toml]",
+  "semgrep",
 ]
 
 # Audio and video processing (optional heavy dependencies)
 media = [
-  "librosa>=0.10,<1.0",
-  "soundfile>=0.12,<1.0",
-  "av>=12.3,<13.0",
-  "ffmpeg-python>=0.2,<1.0",
+  "librosa",
+  "soundfile",
+  "av",
+  "ffmpeg-python",
 ]
 
 # Natural language processing extensions
 nlp = [
-  "spacy>=3.7,<4.0",
-  "nltk>=3.9,<4.0",
-  "gensim>=4.3,<5.0",
-  "textblob>=0.18,<1.0",
-  "sentence-transformers>=2.7,<3.0",
-  "ftfy>=6.2,<7.0",
+  "spacy",
+  "nltk",
+  "gensim",
+  "textblob",
+  "sentence-transformers",
+  "ftfy",
 ]
 
 # Computer vision extensions
 cv = [
-  "ultralytics>=8.2,<9.0",
-  "timm>=1.0,<2.0",
-  "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
-  "mmcv>=2.1,<3.0",
-  "supervision>=0.21,<1.0",
+  "ultralytics",
+  "timm",
+  "mmcv",
+  "supervision",
 ]
 
 # Reinforcement Learning
 rl = [
-  "gymnasium>=0.29,<1.0",
-  "stable-baselines3>=2.3,<3.0",
-  "sb3-contrib>=2.3,<3.0",
-  "tensorboard>=2.17,<3.0",
+  "gymnasium",
+  "stable-baselines3",
+  "sb3-contrib",
+  "tensorboard",
 ]
 
 # Large Language Models and Text Generation
 llm = [
-  "openai>=1.40,<2.0",
-  "anthropic>=0.34,<1.0",
-  "langchain>=0.2,<1.0",
-  "langchain-community>=0.2,<1.0",
-  "chromadb>=0.5,<1.0",
-  "faiss-gpu>=1.7,<2.0",
+  "openai",
+  "anthropic",
+  "langchain",
+  "langchain-community",
+  "chromadb0",
+  "faiss-gpu",
 ]
 
 # All extras combined for comprehensive installation
@@ -553,21 +553,14 @@ link-mode = "copy"
 concurrent-downloads = 20
 keyring-provider = "subprocess"
 
-# PyTorch CUDA index configuration
-extra-index-url = ["https://download.pytorch.org/whl/cu121"]
+[tool.uv.sources]
+torch = { index = "pytorch-cu126" }
+torchvision = { index = "pytorch-cu126" }
+torchaudio = { index = "pytorch-cu126" }
 
-# Default dependency groups to install
-# default-groups = ["dev", "notebook"]
-
-# Index configuration for package sources
-[[tool.uv.index]]
-name = "pypi"
-url = "https://pypi.org/simple"
-default = true
-
-[[tool.uv.index]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cu121"
+[tool.uv.indexes]
+pypi = { url = "https://pypi.org/simple" }
+pytorch-cu121 = { url = "https://download.pytorch.org/whl/cu126" }
 
 # ==============================================================================
 # BANDIT CONFIGURATION - Security linting
